--- a/preprocess/preprocessing.ipynb
+++ b/preprocess/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -43,6 +43,12 @@
        "      <th></th>\n",
        "      <th>patientunitstayid</th>\n",
        "      <th>patienthealthsystemstayid</th>\n",
+       "      <th>intakeoutput.csv</th>\n",
+       "      <th>microLab.csv</th>\n",
+       "      <th>nurseassessment.csv</th>\n",
+       "      <th>treatment.csv</th>\n",
+       "      <th>vitalperiodic.csv</th>\n",
+       "      <th>vitalaperiodic.csv</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -50,51 +56,106 @@
        "      <th>0</th>\n",
        "      <td>3078217</td>\n",
        "      <td>2109336</td>\n",
+       "      <td>11342217:546:500.0:0.0:0.0:500.0:546:flowsheet...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>32003493:40:pulmonary|ventilation and oxygenat...</td>\n",
+       "      <td>673657835.0:251.0:37.0:94.0:76.0:28.0:nan:nan:...</td>\n",
+       "      <td>187643215.0:204.0:113.0:54.0:68.0:nan:nan:nan:...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>3051024</td>\n",
        "      <td>2067631</td>\n",
+       "      <td>9597277:462:500.0:225.0:0.0:275.0:462:flowshee...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3101130</td>\n",
        "      <td>2102152</td>\n",
+       "      <td>11340044:300:200.0:200.0:0.0:0.0:300:flowsheet...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34152086.0:157.0:nan:99.0:152.0:nan:nan:nan:na...</td>\n",
+       "      <td>7183921.0:449.0:104.0:55.0:75.0:nan:nan:nan:na...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3017690</td>\n",
        "      <td>2053166</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>3101832</td>\n",
        "      <td>2020759</td>\n",
+       "      <td>16344202:477:666.0:600.0:0.0:66.0:477:flowshee...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>23986556:17:cardiovascular|shock|vasopressors|...</td>\n",
+       "      <td>478446260.0:12.0:nan:98.0:71.0:28.0:nan:nan:na...</td>\n",
+       "      <td>152863511.0:332.0:104.0:65.0:74.0:nan:nan:nan:...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   patientunitstayid  patienthealthsystemstayid\n",
-       "0            3078217                    2109336\n",
-       "1            3051024                    2067631\n",
-       "2            3101130                    2102152\n",
-       "3            3017690                    2053166\n",
-       "4            3101832                    2020759"
+       "   patientunitstayid  patienthealthsystemstayid  \\\n",
+       "0            3078217                    2109336   \n",
+       "1            3051024                    2067631   \n",
+       "2            3101130                    2102152   \n",
+       "3            3017690                    2053166   \n",
+       "4            3101832                    2020759   \n",
+       "\n",
+       "                                    intakeoutput.csv microLab.csv  \\\n",
+       "0  11342217:546:500.0:0.0:0.0:500.0:546:flowsheet...          NaN   \n",
+       "1  9597277:462:500.0:225.0:0.0:275.0:462:flowshee...          NaN   \n",
+       "2  11340044:300:200.0:200.0:0.0:0.0:300:flowsheet...          NaN   \n",
+       "3                                                NaN          NaN   \n",
+       "4  16344202:477:666.0:600.0:0.0:66.0:477:flowshee...          NaN   \n",
+       "\n",
+       "  nurseassessment.csv                                      treatment.csv  \\\n",
+       "0                 NaN  32003493:40:pulmonary|ventilation and oxygenat...   \n",
+       "1                 NaN                                                NaN   \n",
+       "2                 NaN                                                NaN   \n",
+       "3                 NaN                                                NaN   \n",
+       "4                 NaN  23986556:17:cardiovascular|shock|vasopressors|...   \n",
+       "\n",
+       "                                   vitalperiodic.csv  \\\n",
+       "0  673657835.0:251.0:37.0:94.0:76.0:28.0:nan:nan:...   \n",
+       "1                                                NaN   \n",
+       "2  34152086.0:157.0:nan:99.0:152.0:nan:nan:nan:na...   \n",
+       "3                                                NaN   \n",
+       "4  478446260.0:12.0:nan:98.0:71.0:28.0:nan:nan:na...   \n",
+       "\n",
+       "                                  vitalaperiodic.csv  \n",
+       "0  187643215.0:204.0:113.0:54.0:68.0:nan:nan:nan:...  \n",
+       "1                                                NaN  \n",
+       "2  7183921.0:449.0:104.0:55.0:75.0:nan:nan:nan:na...  \n",
+       "3                                                NaN  \n",
+       "4  152863511.0:332.0:104.0:65.0:74.0:nan:nan:nan:...  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Read in the data\n",
-    "patient = pd.read_csv(dataset_path + \"patient.csv\")\n",
-    "\n",
-    "# Drop all but id columns\n",
-    "patient = patient.iloc[:,0:2]\n",
+    "patient = pd.read_csv(output_path + \"patient.csv\")\n",
     "\n",
     "#print first 5 rows\n",
     "patient.head()"
@@ -102,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,27 +200,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing intakeoutput.csv\n",
-      "Processing microLab.csv\n",
-      "Processing nurseassessment.csv\n",
-      "Processing treatment.csv\n",
-      "Processing vitalperiodic.csv\n"
+      "Processing lab.csv\n",
+      "Processing medication.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_76682/2648625176.py:3: DtypeWarning: Columns (11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  file = pd.read_csv(dataset_path + csv_filename)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing infusiondrug.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_76682/2648625176.py:3: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  file = pd.read_csv(dataset_path + csv_filename)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing nursecare.csv\n",
+      "Processing nursecharting.csv\n"
      ]
     }
    ],
    "source": [
     "# csv files to be processed\n",
     "files = ['intakeoutput.csv', 'microLab.csv', 'nurseassessment.csv', 'treatment.csv', 'vitalperiodic.csv', 'vitalaperiodic.csv']\n",
+    "files_2 = ['lab.csv', 'medication.csv', 'infusiondrug.csv', 'nursecare.csv', 'nursecharting.csv']\n",
     "\n",
     "# Process all csv files and merge with patient on patientunitstayid\n",
-    "for file in files:\n",
+    "for file in files_2:\n",
     "    print(\"Processing \" + file)\n",
     "    data, check = group_cvs(file)\n",
     "    if check:\n",
@@ -168,7 +258,28 @@
     "        patient = patient.merge(data, on='patientunitstayid', how='left')\n",
     "\n",
     "# Save to csv\n",
-    "patient.to_csv(output_path + \"patient.csv\", index=False)"
+    "patient.to_csv(output_path + \"patient_2.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'patient' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m patient\u001b[39m.\u001b[39mhead()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'patient' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "patient.head()"
    ]
   }
  ],
