--- a/preprocess/test.ipynb
+++ b/preprocess/test.ipynb
@@ -2,21 +2,214 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'train/pooled_df.pkl'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mread_pickle(\u001b[39m'\u001b[39;49m\u001b[39mtrain/pooled_df.pkl\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m      5\u001b[0m df\u001b[39m.\u001b[39mhead()\n",
-      "File \u001b[0;32m~/miniconda3/envs/ai/lib/python3.10/site-packages/pandas/io/pickle.py:190\u001b[0m, in \u001b[0;36mread_pickle\u001b[0;34m(filepath_or_buffer, compression, storage_options)\u001b[0m\n\u001b[1;32m    124\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    125\u001b[0m \u001b[39mLoad pickled pandas object (or any object) from file.\u001b[39;00m\n\u001b[1;32m    126\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    187\u001b[0m \u001b[39m4    4    9\u001b[39;00m\n\u001b[1;32m    188\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    189\u001b[0m excs_to_catch \u001b[39m=\u001b[39m (\u001b[39mAttributeError\u001b[39;00m, \u001b[39mImportError\u001b[39;00m, \u001b[39mModuleNotFoundError\u001b[39;00m, \u001b[39mTypeError\u001b[39;00m)\n\u001b[0;32m--> 190\u001b[0m \u001b[39mwith\u001b[39;00m get_handle(\n\u001b[1;32m    191\u001b[0m     filepath_or_buffer,\n\u001b[1;32m    192\u001b[0m     \u001b[39m\"\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m    193\u001b[0m     compression\u001b[39m=\u001b[39;49mcompression,\n\u001b[1;32m    194\u001b[0m     is_text\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m,\n\u001b[1;32m    195\u001b[0m     storage_options\u001b[39m=\u001b[39;49mstorage_options,\n\u001b[1;32m    196\u001b[0m ) \u001b[39mas\u001b[39;00m handles:\n\u001b[1;32m    197\u001b[0m \n\u001b[1;32m    198\u001b[0m     \u001b[39m# 1) try standard library Pickle\u001b[39;00m\n\u001b[1;32m    199\u001b[0m     \u001b[39m# 2) try pickle_compat (older pandas version) to handle subclass changes\u001b[39;00m\n\u001b[1;32m    200\u001b[0m     \u001b[39m# 3) try pickle_compat with latin-1 encoding upon a UnicodeDecodeError\u001b[39;00m\n\u001b[1;32m    202\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    203\u001b[0m         \u001b[39m# TypeError for Cython complaints about object.__new__ vs Tick.__new__\u001b[39;00m\n\u001b[1;32m    204\u001b[0m         \u001b[39mtry\u001b[39;00m:\n",
-      "File \u001b[0;32m~/miniconda3/envs/ai/lib/python3.10/site-packages/pandas/io/common.py:865\u001b[0m, in \u001b[0;36mget_handle\u001b[0;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[1;32m    856\u001b[0m         handle \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39m(\n\u001b[1;32m    857\u001b[0m             handle,\n\u001b[1;32m    858\u001b[0m             ioargs\u001b[39m.\u001b[39mmode,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    861\u001b[0m             newline\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    862\u001b[0m         )\n\u001b[1;32m    863\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    864\u001b[0m         \u001b[39m# Binary mode\u001b[39;00m\n\u001b[0;32m--> 865\u001b[0m         handle \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(handle, ioargs\u001b[39m.\u001b[39;49mmode)\n\u001b[1;32m    866\u001b[0m     handles\u001b[39m.\u001b[39mappend(handle)\n\u001b[1;32m    868\u001b[0m \u001b[39m# Convert BytesIO or file objects passed with an encoding\u001b[39;00m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'train/pooled_df.pkl'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SUBJECT_ID</th>\n",
+       "      <th>ICUSTAY_ID</th>\n",
+       "      <th>DBSOURCE</th>\n",
+       "      <th>FIRST_CAREUNIT</th>\n",
+       "      <th>LAST_CAREUNIT</th>\n",
+       "      <th>FIRST_WARDID</th>\n",
+       "      <th>LAST_WARDID</th>\n",
+       "      <th>INTIME</th>\n",
+       "      <th>OUTTIME</th>\n",
+       "      <th>LOS</th>\n",
+       "      <th>...</th>\n",
+       "      <th>diagnosisstring</th>\n",
+       "      <th>subject_id</th>\n",
+       "      <th>stay_id</th>\n",
+       "      <th>first_careunit</th>\n",
+       "      <th>last_careunit</th>\n",
+       "      <th>intime</th>\n",
+       "      <th>outtime</th>\n",
+       "      <th>los</th>\n",
+       "      <th>anchor_age</th>\n",
+       "      <th>dod</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1027140.0</td>\n",
+       "      <td>3011529.0</td>\n",
+       "      <td>carevue</td>\n",
+       "      <td>CCU</td>\n",
+       "      <td>CCU</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>2152-07-23 05:34:12</td>\n",
+       "      <td>2152-07-24 18:37:32</td>\n",
+       "      <td>1.5440</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1027482.0</td>\n",
+       "      <td>3011175.0</td>\n",
+       "      <td>carevue</td>\n",
+       "      <td>MICU</td>\n",
+       "      <td>MICU</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2162-03-20 17:22:48</td>\n",
+       "      <td>2162-03-22 18:26:10</td>\n",
+       "      <td>2.0440</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1011746.0</td>\n",
+       "      <td>3013234.0</td>\n",
+       "      <td>carevue</td>\n",
+       "      <td>MICU</td>\n",
+       "      <td>MICU</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>2107-07-28 17:22:31</td>\n",
+       "      <td>2107-08-01 11:03:44</td>\n",
+       "      <td>3.7370</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1010325.0</td>\n",
+       "      <td>3022526.0</td>\n",
+       "      <td>metavision</td>\n",
+       "      <td>MICU</td>\n",
+       "      <td>MICU</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>2145-02-06 02:15:08</td>\n",
+       "      <td>2145-02-07 18:47:37</td>\n",
+       "      <td>1.6892</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1012708.0</td>\n",
+       "      <td>3035542.0</td>\n",
+       "      <td>metavision</td>\n",
+       "      <td>SICU</td>\n",
+       "      <td>SICU</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>2175-02-20 07:41:28</td>\n",
+       "      <td>2175-02-23 10:21:01</td>\n",
+       "      <td>3.1108</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 69 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   SUBJECT_ID  ICUSTAY_ID    DBSOURCE FIRST_CAREUNIT LAST_CAREUNIT  \\\n",
+       "0   1027140.0   3011529.0     carevue            CCU           CCU   \n",
+       "1   1027482.0   3011175.0     carevue           MICU          MICU   \n",
+       "2   1011746.0   3013234.0     carevue           MICU          MICU   \n",
+       "3   1010325.0   3022526.0  metavision           MICU          MICU   \n",
+       "4   1012708.0   3035542.0  metavision           SICU          SICU   \n",
+       "\n",
+       "   FIRST_WARDID  LAST_WARDID               INTIME             OUTTIME     LOS  \\\n",
+       "0          57.0         57.0  2152-07-23 05:34:12 2152-07-24 18:37:32  1.5440   \n",
+       "1          12.0         12.0  2162-03-20 17:22:48 2162-03-22 18:26:10  2.0440   \n",
+       "2          52.0         52.0  2107-07-28 17:22:31 2107-08-01 11:03:44  3.7370   \n",
+       "3          52.0         52.0  2145-02-06 02:15:08 2145-02-07 18:47:37  1.6892   \n",
+       "4          33.0         33.0  2175-02-20 07:41:28 2175-02-23 10:21:01  3.1108   \n",
+       "\n",
+       "   ... diagnosisstring subject_id stay_id first_careunit last_careunit  \\\n",
+       "0  ...             NaN        NaN     NaN            NaN           NaN   \n",
+       "1  ...             NaN        NaN     NaN            NaN           NaN   \n",
+       "2  ...             NaN        NaN     NaN            NaN           NaN   \n",
+       "3  ...             NaN        NaN     NaN            NaN           NaN   \n",
+       "4  ...             NaN        NaN     NaN            NaN           NaN   \n",
+       "\n",
+       "   intime  outtime  los  anchor_age  dod  \n",
+       "0     NaT      NaT  NaN         NaN  NaT  \n",
+       "1     NaT      NaT  NaN         NaN  NaT  \n",
+       "2     NaT      NaT  NaN         NaN  NaT  \n",
+       "3     NaT      NaT  NaN         NaN  NaT  \n",
+       "4     NaT      NaT  NaN         NaN  NaT  \n",
+       "\n",
+       "[5 rows x 69 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -37,9 +230,12 @@
     "    # Return random embedding\n",
     "    return np.random.rand(768)\n",
     "\n",
-    "def embed_data(df, embed_string):\n",
-    "    # Embed data\n",
-    "    df['code_name'] = df['code_name'].map(lambda x : [embed(embed_string) for y in x])\n",
+    "def embed_data(df):\n",
+    "    df_embed = pd.DataFrame()\n",
+    "    for i in range(len(df)):\n",
+    "        concat = ''\n",
+    "        for j in range(len(df['code_name'][i])):\n",
+    "            concat += df['code_name'][i][j] + df['value'][i][j] + df['uom'][i][j] + df\n",
     "    return df\n",
     "\n",
     "df = embed_data(df, 'test')\n",
