--- a/preprocess/test.ipynb
+++ b/preprocess/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "[5 rows x 69 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,25 +222,260 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/164320966.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_embed = df_embed.append(pd.DataFrame(embed(concat)).T)\n",
+      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/164320966.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_embed = df_embed.append(pd.DataFrame(embed(concat)).T)\n",
+      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/164320966.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_embed = df_embed.append(pd.DataFrame(embed(concat)).T)\n",
+      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/164320966.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_embed = df_embed.append(pd.DataFrame(embed(concat)).T)\n",
+      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/164320966.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_embed = df_embed.append(pd.DataFrame(embed(concat)).T)\n",
+      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/164320966.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_embed = df_embed.append(pd.DataFrame(embed(concat)).T)\n",
+      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/164320966.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_embed = df_embed.append(pd.DataFrame(embed(concat)).T)\n",
+      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/164320966.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_embed = df_embed.append(pd.DataFrame(embed(concat)).T)\n",
+      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/164320966.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_embed = df_embed.append(pd.DataFrame(embed(concat)).T)\n",
+      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/164320966.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_embed = df_embed.append(pd.DataFrame(embed(concat)).T)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2488</th>\n",
+       "      <th>2489</th>\n",
+       "      <th>2490</th>\n",
+       "      <th>2491</th>\n",
+       "      <th>2492</th>\n",
+       "      <th>2493</th>\n",
+       "      <th>2494</th>\n",
+       "      <th>2495</th>\n",
+       "      <th>2496</th>\n",
+       "      <th>2497</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>n</td>\n",
+       "      <td>i</td>\n",
+       "      <td>o</td>\n",
+       "      <td>n</td>\n",
+       "      <td></td>\n",
+       "      <td>G</td>\n",
+       "      <td>a</td>\n",
+       "      <td>p</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>L</td>\n",
+       "      <td>e</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>c</td>\n",
+       "      <td>e</td>\n",
+       "      <td>t</td>\n",
+       "      <td>a</td>\n",
+       "      <td>m</td>\n",
+       "      <td>i</td>\n",
+       "      <td>n</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>.</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>l</td>\n",
+       "      <td>a</td>\n",
+       "      <td>n</td>\n",
+       "      <td>i</td>\n",
+       "      <td>n</td>\n",
+       "      <td>e</td>\n",
+       "      <td></td>\n",
+       "      <td>A</td>\n",
+       "      <td>m</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>n</td>\n",
+       "      <td>i</td>\n",
+       "      <td>o</td>\n",
+       "      <td>n</td>\n",
+       "      <td></td>\n",
+       "      <td>G</td>\n",
+       "      <td>a</td>\n",
+       "      <td>p</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 2500 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  0    1    2    3    4    5    6    7    8    9     ... 2488 2489 2490 2491  \\\n",
+       "0    A    n    i    o    n         G    a    p    1  ...  NaN  NaN  NaN  NaN   \n",
+       "0    3    0    0    6    0                   L    e  ...  NaN  NaN  NaN  NaN   \n",
+       "0    A    c    e    t    a    m    i    n    o    p  ...    0    .    0    0   \n",
+       "0    A    l    a    n    i    n    e         A    m  ...  NaN  NaN  NaN  NaN   \n",
+       "0    A    n    i    o    n         G    a    p    1  ...  NaN  NaN  NaN  NaN   \n",
+       "\n",
+       "  2492 2493 2494 2495 2496 2497  \n",
+       "0  NaN  NaN  NaN  NaN  NaN  NaN  \n",
+       "0  NaN  NaN  NaN  NaN  NaN  NaN  \n",
+       "0    .    0    0    .    0       \n",
+       "0  NaN  NaN  NaN  NaN  NaN  NaN  \n",
+       "0  NaN  NaN  NaN  NaN  NaN  NaN  \n",
+       "\n",
+       "[5 rows x 2500 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def embed(embed_string):\n",
-    "    # Return random embedding\n",
-    "    return np.random.rand(768)\n",
+    "    # return embedding of string\n",
+    "    return embedder.encode(embed_string)\n",
+    "\n",
     "\n",
     "def embed_data(df):\n",
     "    df_embed = pd.DataFrame()\n",
     "    for i in range(len(df)):\n",
-    "        concat = ''\n",
+    "        concat = []\n",
     "        for j in range(len(df['code_name'][i])):\n",
-    "            concat += df['code_name'][i][j] + df['value'][i][j] + df['uom'][i][j] + df\n",
-    "    return df\n",
+    "            temp = str(df['code_name'][i][j]) + str(df['value'][i][j]) + str(df['uom'][i][j])+ ' '\n",
+    "            concat.append(temp)\n",
+    "        concat = ''.join(concat)\n",
+    "        df_embed = df_embed.append(pd.DataFrame(embed(concat)).T)\n",
+    "        # Add age and gender to df_embed\n",
+    "        df_embed['age'] = df['age']\n",
+    "        df_embed['GENDER'] = df['GENDER']\n",
+    "    return df_embed\n",
     "\n",
-    "df = embed_data(df, 'test')\n",
-    "df.head()"
+    "# Test with first 10 rows\n",
+    "df_test = df.head(10)\n",
+    "df_test = embed_data(df_test)\n",
+    "df_test.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
