--- a/preprocess/test.ipynb
+++ b/preprocess/test.ipynb
@@ -222,33 +222,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['SUBJECT_ID', 'ICUSTAY_ID', 'DBSOURCE', 'FIRST_CAREUNIT',\n",
+      "       'LAST_CAREUNIT', 'FIRST_WARDID', 'LAST_WARDID', 'INTIME', 'OUTTIME',\n",
+      "       'LOS', 'GENDER', 'DOB', 'DOD', 'DOD_HOSP', 'DOD_SSN', 'EXPIRE_FLAG',\n",
+      "       'age', 'readmission', 'mortality', 'los_3day', 'los_7day', 'ICD9_CODE',\n",
+      "       '12h_obs', '24h_obs', 'ID', 'code_name', 'code_offset', 'value', 'uom',\n",
+      "       'code_order', 'seq_len', 'patienthealthsystemstayid', 'gender',\n",
+      "       'ethnicity', 'hospitalid', 'wardid', 'apacheadmissiondx',\n",
+      "       'admissionheight', 'hospitaladmittime24', 'hospitaladmitoffset',\n",
+      "       'hospitaladmitsource', 'hospitaldischargeyear',\n",
+      "       'hospitaldischargetime24', 'hospitaldischargeoffset',\n",
+      "       'hospitaldischargelocation', 'hospitaldischargestatus', 'unittype',\n",
+      "       'unitadmittime24', 'unitadmitsource', 'unitvisitnumber', 'unitstaytype',\n",
+      "       'admissionweight', 'dischargeweight', 'unitdischargetime24',\n",
+      "       'unitdischargeoffset', 'unitdischargelocation', 'unitdischargestatus',\n",
+      "       'uniquepid', 'losday', 'diagnosisstring', 'subject_id', 'stay_id',\n",
+      "       'first_careunit', 'last_careunit', 'intime', 'outtime', 'los',\n",
+      "       'anchor_age', 'dod'],\n",
+      "      dtype='object')\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/164320966.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df_embed = df_embed.append(pd.DataFrame(embed(concat)).T)\n",
-      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/164320966.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df_embed = df_embed.append(pd.DataFrame(embed(concat)).T)\n",
-      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/164320966.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df_embed = df_embed.append(pd.DataFrame(embed(concat)).T)\n",
-      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/164320966.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df_embed = df_embed.append(pd.DataFrame(embed(concat)).T)\n",
-      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/164320966.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df_embed = df_embed.append(pd.DataFrame(embed(concat)).T)\n",
-      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/164320966.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df_embed = df_embed.append(pd.DataFrame(embed(concat)).T)\n",
-      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/164320966.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df_embed = df_embed.append(pd.DataFrame(embed(concat)).T)\n",
-      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/164320966.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df_embed = df_embed.append(pd.DataFrame(embed(concat)).T)\n",
-      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/164320966.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df_embed = df_embed.append(pd.DataFrame(embed(concat)).T)\n",
-      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/164320966.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df_embed = df_embed.append(pd.DataFrame(embed(concat)).T)\n"
+      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/2167356372.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_embed = df_embed.append({'embed': concat}, ignore_index=True)\n",
+      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/2167356372.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_embed = df_embed.append({'embed': concat}, ignore_index=True)\n",
+      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/2167356372.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_embed = df_embed.append({'embed': concat}, ignore_index=True)\n",
+      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/2167356372.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_embed = df_embed.append({'embed': concat}, ignore_index=True)\n",
+      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/2167356372.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_embed = df_embed.append({'embed': concat}, ignore_index=True)\n",
+      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/2167356372.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_embed = df_embed.append({'embed': concat}, ignore_index=True)\n",
+      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/2167356372.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_embed = df_embed.append({'embed': concat}, ignore_index=True)\n",
+      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/2167356372.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_embed = df_embed.append({'embed': concat}, ignore_index=True)\n",
+      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/2167356372.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_embed = df_embed.append({'embed': concat}, ignore_index=True)\n",
+      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/2167356372.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_embed = df_embed.append({'embed': concat}, ignore_index=True)\n"
      ]
     },
     {
@@ -272,196 +296,80 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>2488</th>\n",
-       "      <th>2489</th>\n",
-       "      <th>2490</th>\n",
-       "      <th>2491</th>\n",
-       "      <th>2492</th>\n",
-       "      <th>2493</th>\n",
-       "      <th>2494</th>\n",
-       "      <th>2495</th>\n",
-       "      <th>2496</th>\n",
-       "      <th>2497</th>\n",
+       "      <th>embed</th>\n",
+       "      <th>age</th>\n",
+       "      <th>GENDER</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>A</td>\n",
-       "      <td>n</td>\n",
-       "      <td>i</td>\n",
-       "      <td>o</td>\n",
-       "      <td>n</td>\n",
-       "      <td></td>\n",
-       "      <td>G</td>\n",
-       "      <td>a</td>\n",
-       "      <td>p</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Anion Gap11.0mEq/L:Bicarbonate25.0mEq/L:Biliru...</td>\n",
+       "      <td>45</td>\n",
+       "      <td>M</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>L</td>\n",
-       "      <td>e</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>1</th>\n",
+       "      <td>30060  :Levofloxacin500mg:Dextrose 5%100ml:NS1...</td>\n",
+       "      <td>300</td>\n",
+       "      <td>F</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A</td>\n",
-       "      <td>c</td>\n",
-       "      <td>e</td>\n",
-       "      <td>t</td>\n",
-       "      <td>a</td>\n",
-       "      <td>m</td>\n",
-       "      <td>i</td>\n",
-       "      <td>n</td>\n",
-       "      <td>o</td>\n",
-       "      <td>p</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>.</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>.</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>.</td>\n",
-       "      <td>0</td>\n",
-       "      <td></td>\n",
+       "      <th>2</th>\n",
+       "      <td>Acetaminophen ug/mL:Alanine Aminotransferase (...</td>\n",
+       "      <td>21</td>\n",
+       "      <td>M</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A</td>\n",
-       "      <td>l</td>\n",
-       "      <td>a</td>\n",
-       "      <td>n</td>\n",
-       "      <td>i</td>\n",
-       "      <td>n</td>\n",
-       "      <td>e</td>\n",
-       "      <td></td>\n",
-       "      <td>A</td>\n",
-       "      <td>m</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>3</th>\n",
+       "      <td>Alanine Aminotransferase (ALT)17.0IU/L:Alkalin...</td>\n",
+       "      <td>85</td>\n",
+       "      <td>M</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A</td>\n",
-       "      <td>n</td>\n",
-       "      <td>i</td>\n",
-       "      <td>o</td>\n",
-       "      <td>n</td>\n",
-       "      <td></td>\n",
-       "      <td>G</td>\n",
-       "      <td>a</td>\n",
-       "      <td>p</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>4</th>\n",
+       "      <td>Anion Gap15.0mEq/L:Bicarbonate24.0mEq/L:Chlori...</td>\n",
+       "      <td>59</td>\n",
+       "      <td>F</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 2500 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  0    1    2    3    4    5    6    7    8    9     ... 2488 2489 2490 2491  \\\n",
-       "0    A    n    i    o    n         G    a    p    1  ...  NaN  NaN  NaN  NaN   \n",
-       "0    3    0    0    6    0                   L    e  ...  NaN  NaN  NaN  NaN   \n",
-       "0    A    c    e    t    a    m    i    n    o    p  ...    0    .    0    0   \n",
-       "0    A    l    a    n    i    n    e         A    m  ...  NaN  NaN  NaN  NaN   \n",
-       "0    A    n    i    o    n         G    a    p    1  ...  NaN  NaN  NaN  NaN   \n",
-       "\n",
-       "  2492 2493 2494 2495 2496 2497  \n",
-       "0  NaN  NaN  NaN  NaN  NaN  NaN  \n",
-       "0  NaN  NaN  NaN  NaN  NaN  NaN  \n",
-       "0    .    0    0    .    0       \n",
-       "0  NaN  NaN  NaN  NaN  NaN  NaN  \n",
-       "0  NaN  NaN  NaN  NaN  NaN  NaN  \n",
-       "\n",
-       "[5 rows x 2500 columns]"
+       "                                               embed  age GENDER\n",
+       "0  Anion Gap11.0mEq/L:Bicarbonate25.0mEq/L:Biliru...   45      M\n",
+       "1  30060  :Levofloxacin500mg:Dextrose 5%100ml:NS1...  300      F\n",
+       "2  Acetaminophen ug/mL:Alanine Aminotransferase (...   21      M\n",
+       "3  Alanine Aminotransferase (ALT)17.0IU/L:Alkalin...   85      M\n",
+       "4  Anion Gap15.0mEq/L:Bicarbonate24.0mEq/L:Chlori...   59      F"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Print columns\n",
+    "print(df.columns)\n",
+    "\n",
     "def embed(embed_string):\n",
     "    # return embedding of string\n",
-    "    return embedder.encode(embed_string)\n",
+    "    return embed_string\n",
     "\n",
     "\n",
     "def embed_data(df):\n",
     "    df_embed = pd.DataFrame()\n",
     "    for i in range(len(df)):\n",
-    "        concat = []\n",
+    "        concat = ''\n",
     "        for j in range(len(df['code_name'][i])):\n",
-    "            temp = str(df['code_name'][i][j]) + str(df['value'][i][j]) + str(df['uom'][i][j])+ ' '\n",
-    "            concat.append(temp)\n",
-    "        concat = ''.join(concat)\n",
-    "        df_embed = df_embed.append(pd.DataFrame(embed(concat)).T)\n",
+    "            concat += str(df['code_name'][i][j]) + str(df['value'][i][j]) + str(df['uom'][i][j])+ ':'\n",
+    "        concat = embed(concat)\n",
+    "        df_embed = df_embed.append({'embed': concat}, ignore_index=True)\n",
     "        # Add age and gender to df_embed\n",
-    "        df_embed['age'] = df['age']\n",
-    "        df_embed['GENDER'] = df['GENDER']\n",
+    "    df_embed['age'] = df['age']\n",
+    "    df_embed['GENDER'] = df['GENDER']\n",
     "    return df_embed\n",
     "\n",
     "# Test with first 10 rows\n",
