--- a/preprocess/test.ipynb
+++ b/preprocess/test.ipynb
@@ -222,7 +222,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/noelkj/miniconda3/envs/ai/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Downloading: 100%|██████████| 49.0/49.0 [00:00<00:00, 19.9kB/s]\n",
+      "Downloading: 100%|██████████| 462/462 [00:00<00:00, 162kB/s]\n",
+      "Downloading: 100%|██████████| 213k/213k [00:00<00:00, 2.55MB/s]\n",
+      "Downloading: 100%|██████████| 112/112 [00:00<00:00, 55.8kB/s]\n",
+      "Downloading: 100%|██████████| 433M/433M [00:30<00:00, 14.3MB/s] \n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoTokenizer, AutoModel\n",
+    "\n",
+    "# Load the pre-trained model and tokenizer\n",
+    "model_name = \"dmis-lab/biobert-v1.1\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "model = AutoModel.from_pretrained(model_name)\n",
+    "\n",
+    "\n",
+    "def embed(input_text):\n",
+    "    tokens = tokenizer(input_text, return_tensors=\"pt\")\n",
+    "    embeddings = model(**tokens).last_hidden_state\n",
+    "    pooled_embeddings = embeddings.mean(dim=1)\n",
+    "    return pooled_embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +380,7 @@
        "4  Anion Gap15.0mEq/L:Bicarbonate24.0mEq/L:Chlori...   59      F"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,17 +389,14 @@
     "# Print columns\n",
     "print(df.columns)\n",
     "\n",
-    "def embed(embed_string):\n",
-    "    # return embedding of string\n",
-    "    return embed_string\n",
     "\n",
     "\n",
     "def embed_data(df):\n",
     "    df_embed = pd.DataFrame()\n",
     "    for i in range(len(df)):\n",
-    "        concat = ''\n",
     "        for j in range(len(df['code_name'][i])):\n",
-    "            concat += str(df['code_name'][i][j]) + str(df['value'][i][j]) + str(df['uom'][i][j])+ ':'\n",
+    "            input_text = str(df['code_name'][i][j]) + str(df['value'][i][j]) + str(df['uom'][i][j])\n",
+    "\n",
     "        concat = embed(concat)\n",
     "        df_embed = df_embed.append({'embed': concat}, ignore_index=True)\n",
     "        # Add age and gender to df_embed\n",
@@ -377,13 +409,6 @@
     "df_test = embed_data(df_test)\n",
     "df_test.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
